bk_ida/gccida/c2/gen_decl_die
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_decl_die/src/dwarf2out.c:11881:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_decl_die/src/dwarf2out.c:11882:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_decl_die/src/dwarf2out.c:11887:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rcx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_decl_die/src/dwarf2out.c:11889:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v17; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_decl_die/src/dwarf2out.c:11896:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *abstract_origin; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_decl_die/src/dwarf2out.c:11897:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v25; // rcx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_decl_die/src/dwarf2out.c:11922:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v50; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_decl_die/src/dwarf2out.c:11926:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v54; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_decl_die/src/dwarf2out.c:11930:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *chain; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_decl_die/src/dwarf2out.c:11931:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v59; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_decl_die/src/dwarf2out.c:11942:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v70; // rcx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_decl_die/src/dwarf2out.c:11949:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_decl_die/src/dwarf2out.c:11953:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v81; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_decl_die/src/dwarf2out.c:11954:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v82; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_decl_die/src/dwarf2out.c:11979:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v107; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_decl_die/src/dwarf2out.c:11980:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v108; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_decl_die/src/dwarf2out.c:12023:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 >= DINFO_LEVEL_NORMAL ) 
                    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_decl_die/src/dwarf2out.c:12043:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 < DINFO_LEVEL_NORMAL ) 
                    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_decl_die/src/dwarf2out.c:12148:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 < DINFO_LEVEL_NORMAL ) 
                    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_decl_die/src/obj/dwarf2out.o] Error 1
